# global-province-map-template

./: .gitignore  DATA_SOURCES.md  README.md  ROADMAP.md  pyproject.toml
.agents/: project.json
configs/: sources.toml
docs/: m10-atlas.md  m11-scenario-qa.md  m12-1836.md  m13-1444.md  m14-beta-release.md  m14.5-landing.md  m15-era-geometry.md  m16-multi-era.md  m17-curation.md  m18-culture-religion.md  m19-pmtiles.md  m20-broader-period-geometry.md  m21-hierarchy.md  m23-density-design-note.md  m23-location-fabric.md  m24-start-date-research-framework.md  m25-1444-reconstruction.md  m25-hard-case-casebook.md  m25b-runtime.md  m4-refinement.md  m5-review-viewer.md  m6-seas.md  m7-export.md  m8-scenarios.md  m9-alpha-release.md  phase-1-scaffold.md  schemas.md
landing/: app.js  index.html  styles.css  vercel.json
schemas/: adjacency-record.schema.json  atlas-manifest.schema.json  attribution-record.schema.json  curator-bundle.schema.json  era-geometry-lineage.schema.json  era-geometry-pack.schema.json  global-certification-manifest.schema.json  golden-checks.schema.json  historical-boundary-registry.schema.json  historical-territory-status.schema.json  license-audit-report.schema.json  location-adjacency-record.schema.json  location-admin-intersection.schema.json  location-entity.schema.json  location-fabric-manifest.schema.json  location-lineage.schema.json  location-split-request.schema.json  multi-era-migration-notes.schema.json  multi-era-pack.schema.json  polity-gazetteer.schema.json  province-aggregation-manifest.schema.json  province-entity.schema.json  province-membership-record.schema.json  region-entity.schema.json  release-manifest.schema.json  runtime-pack.schema.json  scenario-definition.schema.json  scenario-diff-report.schema.json  scenario-ownership-record.schema.json  scenario-politics-qa-report.schema.json  source-manifest.schema.json  spatial-golden-borders.schema.json  start-date-changelog.schema.json  start-date-coverage.schema.json  start-date-location-assignments.schema.json  start-date-pass-manifest.schema.json  start-date-qa-report.schema.json  start-date-source-manifest.schema.json  tileset-manifest.schema.json  topology-qa-report.schema.json
scripts/: build-m25-pass.py  build-m25-v2-pass.py  build-m25b-reference.py  build-m25c-global-pass.py  generate-m25c-anomaly-census.py  verify-m25c-anomaly-census.py
tasks/: history.md  m0-m23-acceptance-audit.md  m22-ship-manifest.md  m24-acceptance-audit.md  m25-acceptance-audit.md  m25-evidence-record.md  m25-review-ship-manifest.md  m25a-ship-manifest.md  m25c-anomaly-census-ship-manifest.md  m25c-research-pipeline-ship-manifest.md  m25c-ship-manifest.md  roadmap.md  todo.md
tests/: test_adjacency.py  test_build_provinces.py  test_cli.py  test_historical_certification_contract.py  test_m10_atlas.py  test_m11_scenario_qa.py  test_m12_1836.py  test_m13_1444.py  test_m14_5_landing.py  test_m14_beta.py  test_m15_era_geometry.py  test_m16_multi_era.py  test_m17_curation.py  test_m18_culture_religion.py  test_m19_pmtiles.py  test_m20_broader_period_geometry.py  test_m21_hierarchy.py  test_m22_demo_build.py  test_m23_locations.py  test_m24_start_date_framework.py  test_m25_v2_contract.py  (+18 more)
(+424 files in other folders)
