[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "global-province-map-template"
version = "0.1.0"
description = "License-aware scaffold for generating global strategy-game province maps from open geodata."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Global Province Map contributors" }
]
keywords = ["gis", "geodata", "strategy-games", "provinces", "maps"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gpm = "gpm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/global-province-map-template/configs" = ["configs/sources.toml"]
"share/global-province-map-template/configs/profiles" = ["configs/profiles/*.toml"]
"share/global-province-map-template/schemas" = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
