[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "global-province-map-template"
version = "0.1.0"
description = "License-aware scaffold for generating global strategy-game province maps from open geodata."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Global Province Map contributors" }
]
keywords = ["gis", "geodata", "strategy-games", "provinces", "maps"]
dependencies = [
    "h3>=4.5,<5",
    "rasterio>=1.4,<2",
    "shapely>=2.1,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gpm = "gpm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gpm.viewer" = ["static/*"]

[tool.setuptools.data-files]
"share/global-province-map-template/configs" = ["configs/sources.toml"]
"share/global-province-map-template/configs/profiles" = ["configs/profiles/*.toml"]
"share/global-province-map-template/configs/fabrics" = ["configs/fabrics/*.json"]
"share/global-province-map-template/configs/scenarios" = ["configs/scenarios/*.json"]
"share/global-province-map-template/configs/scenarios/golden" = ["configs/scenarios/golden/*.json"]
"share/global-province-map-template/configs/era_geometry" = ["configs/era_geometry/*.json"]
"share/global-province-map-template/configs/multi_era" = ["configs/multi_era/*.json"]
"share/global-province-map-template/configs/recipes" = ["configs/recipes/*.json"]
"share/global-province-map-template/schemas" = ["schemas/*.schema.json"]
"share/global-province-map-template/samples/curator-bundle-example" = [
  "samples/curator-bundle-example/bundle_manifest.json",
  "samples/curator-bundle-example/README.md",
]
"share/global-province-map-template/samples/curator-bundle-example/scenarios" = [
  "samples/curator-bundle-example/scenarios/*.json",
]
"share/global-province-map-template/samples/curator-bundle-example/golden" = [
  "samples/curator-bundle-example/golden/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
